syntax = "proto3";

option csharp_namespace = "Fusion1.FileServerHost.FileService";

service UploadFileService {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse); 
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message UploadFileRequest {
  FileMetadata metadata = 1;
  bytes data = 2;
}

message FileMetadata {
  string file_name = 1;
}

message UploadFileResponse {
  Status status = 1;
}